@@ -1,4 +1,7 @@
 
+2009-03-17 19:15 Ali aliov@xfce.org 
+	 * : Added experimentale code to monitor hal proxy+some typos
+
 2009-03-17 13:10 Ali aliov@xfce.org 
 	 * : Fix a bug in idle timeout that was breaking gdk events
 
